Quitar warnigs de SonarQube. APP FUNCIONA