@@ -3,29 +3,22 @@ package com.example.demo.service.implementacion;
 import com.example.demo.dto.ServicioDto;
 import com.example.demo.entity.Servicio;
 import com.example.demo.mapper.ServicioMapper;
-import com.example.demo.repository.servicioPeluRepository;
 import com.example.demo.service.ServicioService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import com.example.demo.repository.servicioRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ServicioServiceImpl implements ServicioService {
 
-    @Autowired
+    // Inyección por constructor (mejor que Autowired)
     private final servicioRepository servicioRepository1;
-    @Autowired
-    private servicioPeluRepository servicioPeluRepository1;
+    private final ServicioMapper servicioMapper;
 
-    @Autowired
-    ServicioMapper servicioMapper;
-
-    public ServicioServiceImpl(servicioRepository servicioRepository1, servicioPeluRepository servicioPeluRepository1, ServicioMapper servicioMapper){
+    // Constructor con todas las dependencias
+    public ServicioServiceImpl(servicioRepository servicioRepository1, ServicioMapper servicioMapper){
         this.servicioMapper = servicioMapper;
-        this.servicioPeluRepository1 = servicioPeluRepository1;
         this.servicioRepository1 = servicioRepository1;
     }
 
@@ -36,7 +29,7 @@ public class ServicioServiceImpl implements ServicioService {
         List<Servicio> servicio = servicioRepository1.findAll();
         return servicio.stream()
                 .map(servicioMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     //CREAR SERVICIO (GENÉRICO)
@@ -65,6 +58,3 @@ public class ServicioServiceImpl implements ServicioService {
     }
 
 }
-
-
-
